Fix hero image spacing [TMZ-163](#89)

--- a/modules/content/assets/scss/hello-plus-hero.scss
+++ b/modules/content/assets/scss/hello-plus-hero.scss
@@ -203,6 +203,8 @@
 	}
 
 	&__image {
+		display: flex;
+		justify-content: center;
 		overflow: hidden;
 
 		.elementor & img {
